# guardian-redact

./: README.md  index.html  package-lock.json  package.json  setup.ps1  start-guardian-redact.bat  vite.config.ts
docs/: ARCHITECTURE.md
python-worker/: apply_audio_redactions.py  experiment_gemma3n_audio.py  experiment_image_understanding.py  experiment_whisper.py  export_pdf.py  initialize_ai.py  ollama_manager.py  process_audio.py  process_audio_fixed.py  process_page.py  requirements.txt
src/: App.tsx  pdf-styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/components/: AIInitializationScreen.tsx  AudioEditor.tsx  AudioPIISidebar.tsx  AudioProcessingScreen.tsx  AudioUploadScreen.tsx  DocumentViewer.tsx  FileUploadScreen.tsx  HomeScreen.tsx  ProcessingScreen.tsx  RedactionSidebar.tsx
src/store/: appStore.ts  audioStore.ts
utils/: text_to_pdf.py
