[package]
name = "guardian-redact"
version = "0.1.0"
description = "Privacy-first offline document redaction powered by AI"
authors = ["Guardian Redact Team"]
license = "MIT"
repository = ""
default-run = "guardian-redact"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "window-unminimize", "window-unmaximize", "window-start-dragging", "path-all", "window-show", "window-minimize", "window-maximize", "dialog-save", "dialog-open", "window-hide", "fs-all", "window-close", "shell-open"] }
tokio = { version = "1.0", features = ["full"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
